# MidnightMoveGen

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  bitboard.cpp  bitboard.h  constants.h  move.cpp  move.h  position.cpp  position.h  prng.h  stack.h  tables.h  types.cpp  types.h  useful.cpp  useful.h  zobrist_constants.h
release/: move_gen.h  perft.cpp  print_moves.cpp
src/: bitboard.cpp  bitboard.h  move.h  piece.h  position.cpp  position.h  types.h
src/board/: position.cpp  position.h
src/board/constants/: board_masks.h  misc_constants.h  move_gen_constants.h  move_gen_masks.h
src/board/types/: bitboard.cpp  bitboard.h  board_types.h  move.h  piece.h  square.h
src/constants/: board_masks.h  misc_constants.h  move_gen_constants.h  move_gen_masks.h  zobrist_constants.h
src/move_gen/: move_gen_masks.h  move_generator.cpp  move_generator.h  tables.cpp  tables.h  types.h
src/move_gen/tables/: attack_tables.h  square_tables.h
src/move_gen/types/: move.h
src/types/: bitboard.cpp  bitboard.h  board_rep_types.h  move.h  piece.h
src/utils/: helpers.cpp  helpers.h  stack.h
tests/: attacks.cpp  board-rep.cpp  hash.cpp  perft-final.cpp  perft.cpp  stack.cpp
tests/lib/: doctests.h
